// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <ul>
      <li>
        <a
          class="nav-link"
          href="/jobly"
        >
          Jobly
        </a>
      </li>
      <li>
        <a
          class="nav-link"
          href="/companies"
        >
          Companies
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link"
          href="/jobs"
        >
          Jobs
        </a>
      </li>
      <li>
        <a
          class="nav-link"
          href="/profile"
        >
          Profile
        </a>
      </li>
      <li>
        <button>
           Log Out Janet   
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div>
    <ul>
      <li>
        <a
          class="nav-link"
          href="/jobly"
        >
          Jobly
        </a>
      </li>
      <li>
        <a
          class="nav-link"
          href="/signup"
        >
          Signup
        </a>
      </li>
      <li>
        <a
          class="nav-link"
          href="/login"
        >
          Login
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
